# pytorch-laplace

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/apis/: hessian.doctree  laplace.doctree  optimization.doctree
.doctrees/laplace/: index.doctree
.github/workflows/: documentation.yaml
_sources/apis/: hessian.rst.txt
_sources/laplace/: index.rst.txt
apis/: hessian.html  laplace.html  optimization.html
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/apis/: laplace.rst
docs/source/laplace/: index.rst
examples/: plotting_fun.py
examples/laplacian_autoencoder/mnist/cross_entropy/: lae_online.ipynb  lae_posthoc.ipynb
examples/laplacian_autoencoder/mnist/mse/: lae_online.ipynb  lae_posthoc.ipynb
examples/laplacian_metric_learner/: README.md
examples/laplacian_metric_learner/mnist/: README.md  arccos_posthoc.ipynb  plotting_fun.py
examples/laplacian_segmentation_network/mnist/: bce_posthoc.ipynb
examples/toy_examples/: classification.ipynb  regression.ipynb  regression_laplace_redux.ipynb
laplace/: index.html
pytorch_laplace/: __init__.py
pytorch_laplace/hessian/: base.py  bce.py  contrastive.py  cross_entropy.py  mse.py
pytorch_laplace/laplace/: base.py  diag.py  kron.py  online_diag.py  online_kron.py
pytorch_laplace/optimization/: prior_precision.py
tests/hessian/: bce.py  contrastive.py  cross_entropy.py  mse.py
tests/laplace/: diag.py  kron.py
(+4 files in other folders)
